--- a/web/package.json
+++ b/web/package.json
@@ -54,6 +54,7 @@
     "monaco-yaml": "^5.2.2",
     "next-themes": "^0.3.0",
     "nosleep.js": "^0.12.0",
+    "nuqs": "^2.4.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.1",
