--- a/.github/workflows/airgapped.yml
+++ b/.github/workflows/airgapped.yml
@@ -16,6 +16,7 @@ on:
   push:
     branches:
       - main
+      - docker-action-fix
     paths:
       - "docker/main/Dockerfile.airgapped"
       - "docker/main/prefetch_models.py"
@@ -28,7 +29,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  REGISTRY_IMAGE: skylineagle/caesar
+  REGISTRY_IMAGE: ghcr.io/${{ github.repository }}
   PYTHON_VERSION: 3.11
 
 jobs:
@@ -60,12 +61,13 @@ jobs:
         with:
           platforms: ${{ matrix.platform }}
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Registry
         if: github.event.inputs.push_to_registry != 'false'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
@@ -133,11 +135,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
