--- a/docker/main/Dockerfile.airgapped
+++ b/docker/main/Dockerfile.airgapped
@@ -76,9 +76,10 @@ FROM base_host AS model-prefetch
 ARG DEBIAN_FRONTEND
 
 # Install Python and dependencies for model downloading
-RUN apt-get -qq update \
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    apt-get -qq update \
     && apt-get -qq install -y wget python3 python3-pip \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
 # Set up model cache directory
 ENV MODEL_CACHE_DIR=/rootfs/config/model_cache
@@ -106,8 +107,10 @@ ARG DEBIAN_FRONTEND
 
 # Install OpenVino Runtime and Dev library
 COPY docker/main/requirements-ov.txt /requirements-ov.txt
-RUN apt-get -qq update \
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    apt-get -qq update \
     && apt-get -qq install -y wget python3 python3-dev python3-distutils gcc pkg-config libhdf5-dev \
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/* \
     && wget -q https://bootstrap.pypa.io/get-pip.py -O get-pip.py \
     && sed -i 's/args.append("setuptools")/args.append("setuptools==77.0.3")/' get-pip.py \
     && python3 get-pip.py "pip" \
@@ -135,15 +138,18 @@ ENV CCACHE_MAXSIZE 2G
 
 # Build libUSB without udev.  Needed for Openvino NCS2 support
 WORKDIR /opt
-RUN apt-get update && apt-get install -y unzip build-essential automake libtool ccache pkg-config
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    apt-get update && apt-get install -y unzip build-essential automake libtool ccache pkg-config \
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 RUN --mount=type=cache,target=/root/.ccache wget -q https://github.com/libusb/libusb/archive/v1.0.26.zip -O v1.0.26.zip && \
     unzip v1.0.26.zip && cd libusb-1.0.26 && \
     ./bootstrap.sh && \
     ./configure CC='ccache gcc' CCX='ccache g++' --disable-udev --enable-shared && \
     make -j $(nproc --all)
-RUN apt-get update && \
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    apt-get update && \
     apt-get install -y --no-install-recommends libusb-1.0-0-dev && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 WORKDIR /opt/libusb-1.0.26/libusb
 RUN /bin/mkdir -p '/usr/local/lib' && \
     /bin/bash ../libtool  --mode=install /usr/bin/install -c libusb-1.0.la '/usr/local/lib' && \
@@ -181,7 +187,8 @@ ARG DEBIAN_FRONTEND
 ARG TARGETARCH
 
 # Use a separate container to build wheels to prevent build dependencies in final image
-RUN apt-get -qq update \
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    apt-get -qq update \
     && apt-get -qq install -y \
     apt-transport-https wget \
     && apt-get -qq update \
@@ -199,7 +206,7 @@ RUN apt-get -qq update \
     tclsh \
     # scipy dependencies
     gcc gfortran libopenblas-dev liblapack-dev && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
 RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
 
@@ -263,7 +270,8 @@ ENV HAILORT_LOGGER_PATH=NONE
 ENV PATH="/usr/local/go2rtc/bin:/usr/local/tempio/bin:/usr/local/nginx/sbin:${PATH}"
 
 # Install dependencies
-RUN --mount=type=bind,source=docker/main/install_deps.sh,target=/deps/install_deps.sh \
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    --mount=type=bind,source=docker/main/install_deps.sh,target=/deps/install_deps.sh \
     /deps/install_deps.sh
 
 ENV DEFAULT_FFMPEG_VERSION="7.0"
@@ -307,18 +315,20 @@ RUN mkdir -p /opt/frigate \
     && ln -svf /workspace/frigate/frigate /opt/frigate/frigate
 
 # Install Node 20
-RUN curl -SLO https://deb.nodesource.com/nsolid_setup_deb.sh && \
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    curl -SLO https://deb.nodesource.com/nsolid_setup_deb.sh && \
     chmod 500 nsolid_setup_deb.sh && \
     ./nsolid_setup_deb.sh 20 && \
     apt-get install nodejs -y \
-    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/* \
     && npm install -g npm@10
 
 WORKDIR /workspace/frigate
 
-RUN apt-get update \
+RUN --mount=type=tmpfs,target=/var/cache/apt \
+    apt-get update \
     && apt-get install make -y \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
 RUN --mount=type=bind,source=./docker/main/requirements-dev.txt,target=/workspace/frigate/requirements-dev.txt \
     pip3 install -r requirements-dev.txt
