--- a/docker/main/rootfs/usr/local/nginx/conf/nginx.conf
+++ b/docker/main/rootfs/usr/local/nginx/conf/nginx.conf
@@ -234,6 +234,64 @@ http {
             }
             proxy_pass http://go2rtc/api/webrtc;
             include proxy.conf;
+
+            # WebRTC specific headers
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Disable caching for WebRTC
+            proxy_cache off;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+            expires off;
+
+            # Increase timeouts for WebRTC
+            proxy_read_timeout 300;
+            proxy_send_timeout 300;
+            proxy_connect_timeout 300;
+        }
+
+        # WebRTC API endpoint for configuration
+        location /api/go2rtc/api {
+            include auth_request.conf;
+            limit_except GET {
+                deny  all;
+            }
+            proxy_pass http://go2rtc/api;
+            include proxy.conf;
+
+            # WebRTC specific headers
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Disable caching for WebRTC
+            proxy_cache off;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+            expires off;
+        }
+
+        # WebRTC WebSocket endpoint (for fallback)
+        location /api/go2rtc/ws {
+            include auth_request.conf;
+            proxy_pass http://go2rtc/api/ws;
+            include proxy.conf;
+
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Disable caching for WebRTC
+            proxy_cache off;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+            expires off;
         }
 
         location ~* /api/.*\.(jpg|jpeg|png|webp|gif)$ {
